<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.activity.TransacaoActivity"
    android:id="@+id/view_transacao_activity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        >

        <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
            android:id="@+id/spinner_conta_transacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txtConta"
            android:drawableLeft="@drawable/ic_list_black_24dp"
            android:drawablePadding="10dp"
            >
        </com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_descricao_transacao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txtDescricao"
                android:inputType="textAutoComplete"
                android:drawableLeft="@drawable/ic_description"
                android:drawablePadding="10dp"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_valor_transacao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txtValor"
                android:inputType="numberDecimal"
                android:drawableLeft="@drawable/ic_attach_money"
                android:drawablePadding="10dp"
                android:layout_marginTop="10dp"
                />
        </android.support.design.widget.TextInputLayout>

        <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
            android:id="@+id/spinner_categoria_transacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txtCategoria"
            android:drawableLeft="@drawable/ic_list_black_24dp"
            android:drawablePadding="10dp"
            android:layout_marginTop="10dp"
            >
        </com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/ed_date_transacao"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:hint="@string/txtData"
                    android:inputType="numberDecimal"
                    android:layout_weight="4"
                    android:enabled="false"
                    android:drawableLeft="@drawable/ic_date_range"
                    android:drawablePadding="5dp"
                    />
                <ImageButton
                    android:id="@+id/ib_calendario_transacao"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/ic_date_range"
                    android:backgroundTint="@color/colorPrimary"
                    />
            </LinearLayout>
        </android.support.design.widget.TextInputLayout>




    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>