<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.activity.MainActivity"
    android:id="@+id/coordinator_main_activity"
    >


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_lista_contas"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            >
        </android.support.v7.widget.RecyclerView>

    </ScrollView>

    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/multipleActionsFloatingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fab_labelStyle="@style/menu_labels_style"
        app:fab_labelsPosition="left"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="@dimen/fab_margin"
        android:layout_marginBottom="@dimen/fab_margin"
        app:fab_addButtonStrokeVisible="true"
        >

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnNovaConta_FloatActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="#b700ff"
            app:fab_icon="@drawable/ic_monetization_on_black_24dp"
            app:fab_title="@string/txtNovaConta"
            app:fab_size="mini"/>

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnAddReceita_FloatActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="#17de0c"
            app:fab_icon="@drawable/ic_monetization_on_black_24dp"
            app:fab_title="@string/txtReceita"
            app:fab_size="mini"/>

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnAddDespesa_FloatActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="#de640c"
            app:fab_icon="@drawable/ic_monetization_on_black_24dp"
            app:fab_title="@string/txtDespesa"
            app:fab_size="mini"/>
    </com.getbase.floatingactionbutton.FloatingActionsMenu>

</android.support.constraint.ConstraintLayout>