<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:gravity="center"
    >

    <com.alorma.timeline.RoundTimelineView
        android:id="@+id/timeline_marker"
        android:layout_width="45dp"
        android:layout_height="match_parent"
        app:timeline_indicatorSize="8dp"
        app:timeline_lineStyle="linear"
        app:timeline_type="middle"
        app:timeline_indicatorColor="@color/colorBlack"
        app:timeline_lineColor="@color/colorBlack"
        />


    <android.support.v7.widget.CardView
        android:id="@+id/cv_transacao_celula"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:minHeight="60dp"
        app:cardElevation="5dp"
        app:cardCornerRadius="5dp"
        android:background="@drawable/shape_celula"
        android:layout_margin="5dp"
        >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                >

                <LinearLayout
                    android:id="@+id/layout_transacao_celula"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="2"
                    android:gravity="center"
                    >
                    <TextView
                        android:id="@+id/tv_descricao_transacao"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txtDescricao"
                        android:textSize="20sp"
                        android:textAlignment="center"
                        />

                    <TextView
                        android:id="@+id/tv_categoria_transacao"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txtCategoria"
                        android:textSize="15sp"
                        android:textAlignment="center"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    >
                    <TextView
                        android:id="@+id/tv_valor_transacao"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/txtValor"
                        android:textSize="20sp"
                        android:gravity="center"
                        />
                </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
